dns.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: external-dns
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/version: 0.15.0
    helm.sh/chart: external-dns-1.15.0
  name: external-dns-unifi
  namespace: external-dns
spec:
  ports:
  - name: http
    port: 7979
    protocol: TCP
    targetPort: http
  - name: http-webhook
    port: 8080
    protocol: TCP
    targetPort: http-webhook
  selector:
    app.kubernetes.io/instance: external-dns
    app.kubernetes.io/name: external-dns
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: external-dns
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/version: 0.15.0
    helm.sh/chart: external-dns-1.15.0
  name: external-dns-unifi
  namespace: external-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-dns
      app.kubernetes.io/name: external-dns
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-dns
        app.kubernetes.io/name: external-dns
    spec:
      containers:
      - args:
        - --log-level=info
        - --log-format=text
        - --interval=1m
        - --source=ingress
        - --source=service
        - --policy=sync
        - --registry=txt
        - --txt-owner-id=default
        - --txt-prefix=k8s.
        - --provider=webhook
        - --ignore-ingress-tls-spec
        - --domain-filter=kng.house
        image: registry.k8s.io/external-dns/external-dns:v0.15.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: external-dns
        ports:
        - containerPort: 7979
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
      - env:
        - name: UNIFI_HOST
          valueFrom:
            secretKeyRef:
              key: host
              name: external-dns-unifi-secret
        - name: UNIFI_API_KEY
          valueFrom:
            secretKeyRef:
              key: api-key
              name: external-dns-unifi-secret
        - name: UNIFI_EXTERNAL_CONTROLLER
          value: "false"
        - name: UNIFI_TLS_SKIP_VERIFY
          value: "true"
        - name: LOG_LEVEL
          value: info
        image: ghcr.io/kashalls/external-dns-unifi-webhook:main
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthz
            port: http-webhook
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: webhook
        ports:
        - containerPort: 8080
          name: http-webhook
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /readyz
            port: http-webhook
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: external-dns-unifi
